SAN-24-Fixing-Date-and-Amount updating ConfirmationController and ConfirmationControllerTest